# Avatar-Engine

./: .env.example  .gitignore  AGENTS.md  Python development tools and libraries.md  README.md  avatar_engine_pipeline.md  proof_avatar_engine_bootstrap_001.json  proof_avatar_engine_comfyui_image_002.json  proof_avatar_engine_talking_head_003.json  pyproject.toml
docs/: 01_PROJECT_SCOPE.md  02_ARCHITECTURE.md  03_COMFY_AGENT_REUSE_PLAN.md  04_PROJECT_STRUCTURE.md  05_DEVELOPMENT_PLAN.md  06_LOCAL_SETUP.md  07_GPU_QUEUE_AND_RESOURCE_POLICY.md  08_DATA_AND_ARTIFACTS.md  09_TEST_STRATEGY.md  10_GIT_WORKFLOW.md  11_ACCEPTANCE_CRITERIA.md  12_RISKS_AND_LIMITS.md  13_AGENT_IMPLEMENTATION_BRIEF.md  REUSE_LEDGER.md
src/avatar_engine/: __init__.py  cli.py  config.py  db.py  models.py
tests/: conftest.py
tests/integration/: test_fake_comfyui_client.py  test_job_restart_recovery.py  test_talking_head_failure_no_retry.py  test_talking_head_fake_runtime.py  test_talking_head_output_isolation.py  test_talking_head_worker_flow.py  test_worker_fake_pipeline.py
tests/unit/: test_audio_validation.py  test_comfyui_client_responses.py  test_comfyui_wait_timeout.py  test_config.py  test_generation_limit.py  test_git_root_validation.py  test_gpu_lock.py  test_image_validation.py  test_job_repository.py  test_manifest.py  test_pipeline_runner.py  test_queue_fifo.py  test_real_job_state_transitions.py  test_reference_image_job_input.py  test_reference_image_not_hardcoded.py  test_reference_image_validation.py  test_state_transitions.py  (+8 more)
workflows/: simple_portrait.json
(+42 files in other folders)
