[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-engine"
version = "0.1.0"
description = "Local single-user Avatar Engine foundation"
requires-python = ">=3.11,<3.12"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "pydantic-settings>=2",
  "httpx>=0.27",
  "filelock>=3.13",
  "pillow>=10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[project.scripts]
avatar-engine = "avatar_engine.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --basetemp=data/runtime/pytest"
markers = [
  "local_comfyui: requires a local ComfyUI server",
  "local_talking_head: requires a local talking-head runtime",
  "gpu: requires the local GPU runtime",
  "real_generation: performs one real generation",
]
